manual workflow_dispatch

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,10 +1,7 @@
 name: Laravel
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   laravel-tests:
