--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,7 +1,10 @@
 name: Variables de Ambiente predeterminadas
 
 on:
-  workflow_dispatch:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   laravel-tests:
